Prototype Functions + Reference Checking Errors + Punctuation Styling
Additions:
- Added the functions focus() and replace() to the NumTextElement prototype!
  The focus() function will focus the NumText element's editor (preventScroll can be passed to this function to prevent scrolling to the cursor's position in the editor, exactly like the you would for the focus() function on other HTML elements).
  The replace() function will replace text in the editor's value that match the supplied RegEx pattern passed in through the first parameter. A replacement value for the matched segments can be supplied in the second parameter. If the new replaced result is the same as before the replace() function was called, the value of the editor will not be reentered.

Changes:
- Decreased HTML punctuation opacity in the default highlighting theme.
- HTML tag attribute value punctuation is now colored the same as the global string color, instead of matching the HTML tag punctuation color.
- Adjusted the syntax-language property to have it's own getter and setter functions on the NumText element, instead of being a prototype function nested within the syntax-highlight property.

Fixes:
- All reference checking errors will no longer use the "throw" keyword to show error messages. I only intended to throw the error messages to inform the developer that something they were calling involed a Reference Error along the way, not to stop the entire script in it's tracks at that point.

--- a/NumText-merger.html
+++ b/NumText-merger.html
@@ -63,7 +63,7 @@ code.editor.value = `<style>
     str.match(/name/g,"fwfwef");
   }
 <\/script>`;
-code.syntaxHighlight.language.set("html");
+code.syntaxLanguage = "html";
 code.syntaxHighlight.enable();
 
 toggler.addEventListener("mousedown",event => event.preventDefault());
