--- a/NumText-merger.html
+++ b/NumText-merger.html
@@ -6,6 +6,9 @@
 <title>NumText-merger</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
+<link rel="preload" as="style" href="https://offroaders123.github.io/Num-Text-Component/vanilla-layout.css">
+<link rel="preload" as="style" href="https://offroaders123.github.io/Num-Text-Component/vanilla-appearance.css">
+<link rel="preload" as="style" href="https://offroaders123.github.io/Num-Text-Component/vanilla-highlighting.css">
 <script src="script.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.23.0/prism.min.js" data-manual></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.23.0/components/prism-json.min.js"></script>
