Scripting and Theme Improvements
Additions:
- Theme definitions within the global NumText object will now keep track of all elements that have that specified theme added. The list is located in the new property "elements".

Changes:
- Themes defined from a URL will now use link tags instead of inline style tags. To prevent layout flashes on page load, I recommend putting preload link tags in the head of the page for the URL to any themes you will be using right on startup.
- Theme styles will now be placed directly inside of the element's Shadow DOM, instead of inside the ::part(container) element.
- Syntax highlighting themes can now only be applied one at a time. Adding a new syntax highlighting theme will remove any previous ones applied, active or not.
- Simplified most error messages to help make the message clearer in terms of what went wrong.

Removals:
- From the global NumText object, I removed the update(), fetch(), and _tempBackwardsCompatibility_() functions. Now that themes from URLs now use link tags again, there's no need to have to fetch the theme text content manually using fetch() calls.

--- a/NumText-merger.html
+++ b/NumText-merger.html
@@ -9,6 +9,7 @@
 <link rel="preload" as="style" href="https://offroaders123.github.io/Num-Text-Component/vanilla-layout.css">
 <link rel="preload" as="style" href="https://offroaders123.github.io/Num-Text-Component/vanilla-appearance.css">
 <link rel="preload" as="style" href="https://offroaders123.github.io/Num-Text-Component/vanilla-highlighting.css">
+<link rel="preload" as="style" href="https://cdn.jsdelivr.net/npm/prism-themes@1.7.0/themes/prism-vsc-dark-plus.css">
 <script src="script.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.23.0/prism.min.js" data-manual></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.23.0/components/prism-json.min.js"></script>
@@ -69,15 +70,22 @@ code.editor.value = `<style>
 code.syntaxLanguage = "html";
 code.syntaxHighlight.enable();
 
+NumText.themes.define({
+  name: "vsc-dark-plus",
+  type: "syntax-highlight",
+  url: "https://cdn.jsdelivr.net/npm/prism-themes@1.7.0/themes/prism-vsc-dark-plus.css"
+});
+
 toggler.addEventListener("mousedown",event => event.preventDefault());
 
 //code.themes.getAll().forEach(theme => code.themes.remove(theme));
-//code.themes.remove("default-appearance");
-toggleHighlighting();
+code.colorScheme.toggle();
+code.themes.add("vsc-dark-plus");
+//toggleHighlighting();
 function toggleHighlighting(){
-  //code.syntaxHighlight.toggle();
+  code.syntaxHighlight.toggle();
   //document.documentElement.classList.toggle("dark");
-  code.colorScheme.toggle();
+  //code.colorScheme.toggle();
 }
 </script>
 
