Themes Attribute + Blur Function + Layout Abstraction
Additions:
- Added the "theme" NumText element attribute! Similar to how the "class" attribute on any other element behaves, you can state which themes should be loaded into NumText elements once they have been added to the page.
- Added a blur() prototype function that will remove focus from the NumText element's editor.

Changes:
- Rewrote the element.themes.getAll() prototype function to query all added themes from the element.themes.entries object instead of querying for theme style tags within the element's Shadow DOM.
- The vanilla element layout theme now uses a new type category, "user-agent", instead of the default "any" type.
- Themes with the "user-agent" theme type will be hidden from element.themes.getAll() function call results when no theme type is specified. To still get all "user-agent" theme types within an element, you would pass "user-agent" as a theme type to search for instead. I added this little layer of abstraction because it was too easy to accidentally mess up the whole element's appearance before, so now you know exactly what you are doing if you are going to be modifying base element styles.

--- a/NumText-merger.html
+++ b/NumText-merger.html
@@ -14,6 +14,14 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.23.0/prism.min.js" data-manual></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.23.0/components/prism-json.min.js"></script>
 
+<script>
+  NumText.themes.define({
+    name: "vsc-dark-plus",
+    type: "syntax-highlight",
+    url: "https://cdn.jsdelivr.net/npm/prism-themes@1.7.0/themes/prism-vsc-dark-plus.css"
+  });
+</script>
+
 <style>
   :root.dark {
     color-scheme: dark;
@@ -35,7 +43,7 @@
 
 <h1>NumText-merger</h1>
 
-<num-text id="code" placeholder="Temp..." syntax-language="json" value='{
+<num-text id="code" placeholder="Temp..." syntax-language="json" themes="vsc-dark-plus" value='{
   "name": true,
   "pancakes": "sweet-towels"
 }'></num-text>
@@ -43,7 +51,7 @@
 <textarea>A default textarea</textarea>
 <button id="toggler" onclick="toggleHighlighting();">Toggle Highlighting</button>
 
-<script>console.clear();
+<script>//console.clear();
 /*code.editor.value = `<html>
 
 <script>
@@ -69,12 +77,6 @@ code.editor.value = `<style>
 <\/script>`;
 code.syntaxLanguage = "html";
 code.syntaxHighlight.enable();
-
-NumText.themes.define({
-  name: "vsc-dark-plus",
-  type: "syntax-highlight",
-  url: "https://cdn.jsdelivr.net/npm/prism-themes@1.7.0/themes/prism-vsc-dark-plus.css"
-});
 
 toggler.addEventListener("mousedown",event => event.preventDefault());
 
