Defining Themes Syntax + ConnectedCallback Lifecycle
Changes:
- Adjusted the syntax for defining NumText themes to be more like native JS functions, one example being EventTarget.addEventListener(). Instead of the theme name being a key within the object passed to the function, it will instead be a string in the first parameter, then the normal object after that. If my description didn't make any sense, feel free to check the diff for NumText-merger.html

Fixes:
- Component behavior and Shadow Root elements will no longer be called multiple times during the element's lifecycle. It will only occur with during the first connectedCallback() call when the element is connected to the document.

--- a/NumText-merger.html
+++ b/NumText-merger.html
@@ -15,8 +15,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.23.0/components/prism-json.min.js"></script>
 
 <script>
-  NumText.themes.define({
-    name: "vsc-dark-plus",
+  NumText.themes.define("vsc-dark-plus",{
     type: "syntax-highlight",
     url: "https://cdn.jsdelivr.net/npm/prism-themes@1.7.0/themes/prism-vsc-dark-plus.css"
   });
