--- a/NumText-merger.html
+++ b/NumText-merger.html
@@ -42,7 +42,7 @@
 
 <h1>NumText-merger</h1>
 
-<num-text id="code" placeholder="Temp..." syntax-language="json" themes="vsc-dark-plus" value='{
+<num-text id="code" placeholder="Temp..." syntax-language="json" value='{
   "name": true,
   "pancakes": "sweet-towels"
 }'></num-text>
@@ -80,7 +80,7 @@ code.syntaxHighlight.enable();
 toggler.addEventListener("mousedown",event => event.preventDefault());
 
 //code.themes.getAll().forEach(theme => code.themes.remove(theme));
-code.colorScheme.toggle();
+//code.colorScheme.toggle();
 //code.themes.add("vsc-dark-plus");
 //toggleHighlighting();
 function toggleHighlighting(){
