--- a/example/index.html
+++ b/example/index.html
@@ -3,9 +3,10 @@
 
 <head>
 
-<title>NumText-merger</title>
+<title>Num Text Example</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
+<base href=".">
 <link rel="preload" as="fetch" crossorigin href="https://offroaders123.github.io/Num-Text-Component/vanilla-layout.css">
 <link rel="preload" as="fetch" crossorigin href="https://offroaders123.github.io/Num-Text-Component/vanilla-appearance.css">
 <link rel="preload" as="fetch" crossorigin href="https://offroaders123.github.io/Num-Text-Component/vanilla-highlighting.css">
@@ -40,7 +41,7 @@
 
 <body>
 
-<h1>NumText-merger</h1>
+<h1>Num Text Example</h1>
 
 <num-text id="code" placeholder="Temp..." syntax-language="json" value='{
   "name": true,
