The Next Rewrite
In a similar vein to my recent work on Menu Drop, I am working on some nicer reworks for the components, now that I've had some more experience with Web Components since originally working on these!

I had some time away from home today to code (kind of a refresher for more inspiration), and I was actually going to try out using CodeMirror 6, since that's one of the libraries that has inspired Num Text, but I didn't have Wi-Fi there to clone the repo! Funny issue hehe. I decided to just start reworking an extra simple STE for fun, and I got a good amount of Num Text redone from scratch! Some parts are fairly similar to the current codebase, but I made a lot of the similar changes that I did to Menu Drop recently, which I've also wanted to do with Num Text. This commit is just a few changes to align the future work with that new design.

Alright, this next part was actually after that previous CodeMirror sentence, so the context is why I am working on my own editor, rather than using CodeMirror or another editor instead.

I like the feature set that it has, as well as the mobile support, but I'm not too keen on the complexity of everything. It's nothing against CodeMirror by any means at all, it's just my weird self that likes to have things nice and encapulated. I haven't needed to use a bundler yet for my projects, and I don't want to start using one just for the sake of a code editor library. This seems to be a disconnect for many of the JS code editors out there. While they are designed for the web, they don't appearently provide HTML support to just use them in your markup, out of the box. I really like CodeMirror, Monaco Editor, and Ace too, but they aren't as simple of a process to use as I'd hope them to be. Rather than fretting about their effort and hard work to make such powerful libraries, I think it it worthwhile to try and solve my own problem myself, since I have the power to make it however I need it to work :)

Coincidentally, I star

--- a/example/index.html
+++ b/example/index.html
@@ -6,12 +6,11 @@
 <title>Num Text Example</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
-<base href=".">
-<link rel="preload" as="fetch" crossorigin href="https://offroaders123.github.io/Num-Text-Component/vanilla-layout.css">
-<link rel="preload" as="fetch" crossorigin href="https://offroaders123.github.io/Num-Text-Component/vanilla-appearance.css">
-<link rel="preload" as="fetch" crossorigin href="https://offroaders123.github.io/Num-Text-Component/vanilla-highlighting.css">
+<base href="../">
+<link rel="preload" as="fetch" crossorigin href="styles.css">
+<link rel="preload" as="fetch" crossorigin href="vanilla-highlighting.css">
 <link rel="preload" as="fetch" crossorigin href="https://cdn.jsdelivr.net/npm/prism-themes@1.7.0/themes/prism-vsc-dark-plus.css">
-<script src="https://offroaders123.github.io/Num-Text-Component/script.js"></script>
+<script src="script.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.23.0/prism.min.js" data-manual></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.23.0/components/prism-json.min.js"></script>
 
@@ -23,10 +22,8 @@
 </script>
 
 <style>
-  :root.dark {
+  :root {
     color-scheme: dark;
-    color: #ffffff;
-    background: #121212;
   }
   body {
     margin: 0;
@@ -43,7 +40,7 @@
 
 <h1>Num Text Example</h1>
 
-<num-text id="code" placeholder="Temp..." syntax-language="json" value='{
+<num-text id="code" class="color-scheme-dark" placeholder="Temp..." syntax-language="json" value='{
   "name": true,
   "pancakes": "sweet-towels"
 }'></num-text>
