--- a/example/index.html
+++ b/example/index.html
@@ -6,7 +6,7 @@
 <title>Num Text</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-<meta name="color-scheme" content="dark">
+<!-- <meta name="color-scheme" content="dark"> -->
 <base href="../">
 <link rel="stylesheet" href="styles.css">
 <script src="script.js"></script>
