--- a/test/index.html
+++ b/test/index.html
@@ -15,7 +15,7 @@
 <num-text>A fancy Num Text editor :)</num-text>
 <textarea>A default textarea</textarea>
 
-<script type="module" src="../dist/index.js"></script>
+<script type="module" src="../src/index.js"></script>
 
 </body>
 
