CSS Modules + ES Module Shims
So happy to finally be able to use CSS Modules! This is all thanks to ES Module Shims, which brings support to all other browsers that don't have it built in just yet.

This has been the ideal setup for my Web Components for some time now, and it really helps take Web Components to a new level! It's great to just be able to bridge the missing support gaps with polyfills before support is fully there.

I tried adding these directly into the library code itself, but it looks like you have to run it before your module with modern code is run, because it essentially has to be built with ES Module Shims before you can run it directly. So, if you import the polyfill in your script with modern code, then it can't polyfill your script because it's already loaded in, and ready to run. So a nice way around this is to simply have a module script run before your actual app code, which runs the polyfills before your app code is read. I didn't like having multiple script tags for all of these, so I figured out that I can just run them all in one single module tag, thanks to dynamic imports, which don't have to run at the beginning of the module. You can first set the shim polyfill options on the window, then run the polyfills after that. Works like a shim! XD

https://web.dev/css-module-scripts/
https://github.com/guybedford/es-module-shims

https://web.dev/constructable-stylesheets/
https://github.com/calebdwilliams/construct-style-sheets

It really was a while ago that I first heard about Constructable Stylesheets and CSS Modules. It reminds me of coding during school on my Chromebook (not yet Linux, lol), when we came back from the initial COVID shutdown. That was a while ago! It's when I first found out about https://web.dev, so looking at the explainers for the two specs (the image with the shipping containers especially) really brings me back to then :) I've some such a long way in coding since then though, I'm super proud of that! Always tryin

--- a/test/index.html
+++ b/test/index.html
@@ -6,6 +6,8 @@
 <title>Num Text</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+<script type="module" src="./polyfill.js"></script>
+<script type="module" src="./app.js"></script>
 
 <style>
   :root {
@@ -26,18 +28,13 @@
 <body>
 
 <h1>Num Text</h1>
-
 <p>A simple Web Component that adds line numbers to native textarea elements!</p>
 
 <num-text>A fancy Num Text editor :)</num-text>
-
 <textarea>A default textarea</textarea>
 
 <p><button onclick="document.documentElement.classList.toggle('dark');">Toggle Color Scheme</button></p>
-
 <p><a href="https://github.com/Offroaders123/NBT-Parser">Open source on GitHub!</a></p>
-
-<script type="module" src="./app.js"></script>
 
 </body>
 
