--- a/test/index.html
+++ b/test/index.html
@@ -5,37 +5,18 @@
 
 <title>Num Text</title>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <script type="module" src="./polyfill.js"></script>
 <script type="module" src="./app.js"></script>
-
-<style>
-  :root {
-    color-scheme: light;
-  }
-  :root.dark {
-    color-scheme: dark;
-  }
-  body {
-    margin: 0;
-    padding: 0 18px;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", system-ui, sans-serif;
-  }
-</style>
 
 </head>
 
 <body>
-
-<h1>Num Text</h1>
-<p>A simple Web Component that adds line numbers to native textarea elements!</p>
-
-<num-text>A fancy Num Text editor :)</num-text>
-<textarea>A default textarea</textarea>
-
-<p><button onclick="document.documentElement.classList.toggle('dark');">Toggle Color Scheme</button></p>
-<p><a href="https://github.com/Offroaders123/NBT-Parser">Open source on GitHub!</a></p>
-
+  <num-text>:host {
+  color: orange;
+  background: red;
+}</num-text>
 </body>
 
 </html>
