--- a/example/index.html
+++ b/example/index.html
@@ -6,12 +6,12 @@
 <title>Num Text Example</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
-<base href=".">
-<link rel="preload" as="fetch" crossorigin href="https://offroaders123.github.io/Num-Text-Component/vanilla-layout.css">
-<link rel="preload" as="fetch" crossorigin href="https://offroaders123.github.io/Num-Text-Component/vanilla-appearance.css">
-<link rel="preload" as="fetch" crossorigin href="https://offroaders123.github.io/Num-Text-Component/vanilla-highlighting.css">
+<base href="./">
+<link rel="preload" as="fetch" crossorigin href="../styles/vanilla-layout.css">
+<link rel="preload" as="fetch" crossorigin href="../styles/vanilla-appearance.css">
+<link rel="preload" as="fetch" crossorigin href="../styles/vanilla-highlighting.css">
 <link rel="preload" as="fetch" crossorigin href="https://cdn.jsdelivr.net/npm/prism-themes@1.7.0/themes/prism-vsc-dark-plus.css">
-<script src="https://offroaders123.github.io/Num-Text-Component/script.js"></script>
+<script src="../dist/index.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.23.0/prism.min.js" data-manual></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.23.0/components/prism-json.min.js"></script>
 
