--- a/example/index.html
+++ b/example/index.html
@@ -35,6 +35,9 @@
     font-family: system-ui, sans-serif;
     touch-action: manipulation;
   }
+  num-text {
+    width: 300px;height: 500px;width: 500px;height: 225px;
+  }
 </style>
 
 </head>
