--- a/test/index.html
+++ b/test/index.html
@@ -7,8 +7,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<script type="module" src="./polyfill.js"></script>
-<script type="module" src="./app.js"></script>
+<script type="module" src="./polyfill.ts"></script>
+<script type="module" src="./app.ts"></script>
 
 </head>
 
