--- a/test/index.html
+++ b/test/index.html
@@ -7,7 +7,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<script type="module" src="./app.ts"></script>
+<script type="module" src="./index.ts"></script>
 
 </head>
 
