--- a/test/index.html
+++ b/test/index.html
@@ -6,6 +6,7 @@
 <title>Num Text</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="color-scheme" content="dark">
 
 <script type="module" src="./index.ts"></script>
 
