Value Attribute + Accessors :O
Realized that using innerHTML feels a bit messy for the initial text content, just because of HTML rendering and escapes, that kind of thing. I don't want to render the inner part of the element for example, so say you put HTML text in there, I don't want that to render as HTML before the Shadow DOM loads. For some reason I didn't think you could store newlines in HTML attributes up until now, for some odd reason.

https://stackoverflow.com/questions/6851868/is-it-possible-to-have-attribute-values-that-span-multiple-lines
https://stackoverflow.com/questions/47958112/including-line-breaks-in-html-attributes

Realized that the accessors spec around decorators is now supported by TS out of the box!!! It's going to be in JS itself soon as well! I realized that it might actually be exactly what I was wanting in Web Components and their state management. I am really curious about using accessors like you do SolidJS signals, and if you can make reactive components with vanilla JS, without a bunch of spaghetti code (or libraries :D)

I think the change here is now I get how component-based projects could work great, it's just a matter of learning how I should implement that at a Web Component level.

```ts
// https://github.com/tc39/proposal-decorators
// https://devblogs.microsoft.com/typescript/announcing-typescript-5-0/#decorators
// https://2ality.com/2022/10/javascript-decorators.html
// ES2023 compiled output

export class Nice {
  accessor #hey: number;

  constructor() {
    this.#hey = 5;
  }
}
```

self-work video: aHR0cHM6Ly93d3cueW91dHViZS5jb20vd2F0Y2g/dj1hRDBmQ0wwWHFNOA== 💯

RGV2aW4gVG93bnNlbmQgaGFzIGhlbHBlZCBtZSB1bmRlcnN0YW5kIGhvdyBmZWVsaW5nIGFuZ2VyIGlzIG9rYXksIGl0J3MganVzdCBhbiBleHByZXNzaW9uIG9mIGhvdyB5b3UgZmVlbC4=

--- a/test/index.html
+++ b/test/index.html
@@ -13,10 +13,10 @@
 </head>
 
 <body>
-  <num-text>:host {
+  <num-text value=":host {
   color: orange;
   background: red;
-}</num-text>
+}"></num-text>
 </body>
 
 </html>
